# openbsd

task2/: gen.py  run_tests.sh  solution.sh
task3/: add_book.sh  create_lib.sh
task4/: CMakeLists.txt  Makefile
task4/hl/: common.c  common.h  hldetector.c  hlgenerator.c  hlparser.c  hlparser.h
task4/source/: hl.tgz
